# control-rs485-switch

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: main.yml
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: control.rs  lib.rs  main.rs  prelude.rs
