[package]
name = "control-rs485-switch"
version = "1.0.3"
description = "用于远程控制空气开关"
authors = ["shuijing"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "control_rs485_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
anyhow = "1.0.93"
tokio-serial = "5.4.4"
tokio-modbus = "0.16.0"
num_enum = "0.7.3"
tauri-plugin-dialog = "2"
